# CCD-Implementation

./: CMakeLists.txt  README.md  main.cpp
include/: Aabb.h  calculator.h  constructor.h
src/: Aabb.cpp  calculator.cpp  constructor.cpp
